<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TheCampusFeed</string>
    <string name="action_settings">Settings</string>
    <string name="section1">Top Posts</string>
    <string name="section2">New Posts</string>
    <string name="section3">Trending Tags</string>
    <string name="section4">Most Active Colleges</string>
    <string name="section5">My Posts</string>
    <string name="section6">My Comments</string>
    <string name="sendTo">Share this Post via...</string>
    <string name="twitterMessage">Want to see our pick of the top post on TheCampusFeed per day? Be sure to follow us on Twitter at @The_Campus_Feed!</string>
    <string name="webDialogMessage">Want to check out posts while you\'re on your computer? Be sure to check out www.TheCampusFeed.com!</string>
    <string name="chooseFeedDialogTitle">Choose a Feed</string>
    <string name="allCollegesTitle">Combines All Colleges into 1 Feed</string>
    <string name="allColleges">All Colleges</string>
    <string name="megaFeed">Mega-Feed</string>
    <string name="searchColleges">Choose a College</string>
    <string name="nearYou">Near You</string>
    <string name="other">Other Colleges</string>
    <string name="flagMessage">Are you sure you wish to flag this post as inappropriate? 
        Posts with a certain amount of flags per views are automatically removed. 
        Do your part for TheCampusFeed community and flag any post that:\n\n
        • Is offensive, bad-natured, or threatening\n
        • Targets a specific person negatively to the point of bullying\n
        • Has a phone number\n
        \nUsers that have more than one post taken down get banned from posting on the app again.</string>
    <string name="gettingStartedMessage">TheCampusFeed is an anonymous message board. No logins, no accounts. Anyone
        can view any college\'s feed, as well as the All Colleges feed which is a mixture of all colleges\' posts put
        together.\n\nIf you make a post that gets a certain amount of flags,
        it will be automatically removed. If you have multiple posts removed, you will be banned from posting to the app.
        Think before you post! To view the rules, click the Flag icon for any post near you.</string>
    <string name="whatsTimeCrunch">Want to post and comment on your University\'s feed this Summer as if you\'re actually there,
        but are instead visiting home? What about this Winter Break?\n\nFor every post you make to your University,
        15 hours get added to your Time Crunch. Once you activate Time Crunch, your current location at your
        University is saved in the app for that long! You can get extra hours added by unlocking Achievements.\n\nNOTE: Once you use your Time Crunch, there\'s no stopping
        it and you can only use it when you\'re near the University, so use it before you head home!</string>
    <string name="forceUpdateMessage">There is a new required app update.</string>
    <string name="emptyListString">Pull down to load posts</string>

</resources>
